--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -6,11 +6,11 @@ services:
     container_name: redis
     ports:
       - "6379:6379"
-  metrics-sink:
+  yapg:
     build:
       context: .
       dockerfile: Dockerfile
-    container_name: metrics-sink
+    container_name: yapg
     ports:
       - "9091:9091"
     environment:
